[gd_scene load_steps=2 format=3 uid="uid://dkl3gud7qjwxv"]

[ext_resource type="Script" path="res://scripts/core/SolarSystem.gd" id="1_z87ws"]

[node name="SolarSystem" type="Node2D"]
script = ExtResource("1_z87ws")

[node name="CelestialBodiesContainer" type="Node2D" parent="."]

[node name="ResourcesContainer" type="Node2D" parent="."]

[node name="ProbesContainer" type="Node2D" parent="."]

[node name="ParticleEffectsContainer" type="Node2D" parent="."]
metadata/_edit_lock_ = true